@@ -497,6 +497,7 @@ Full API documentation is available at http://www.mediawiki.org/wiki/API
 * Added page parameter to action=parse to facilitate parsing of existing pages
 * Added uiprop=ratelimits to meta=userinfo
 * Added siprop=namespacealiases to meta=siteinfo
+* Made multiple values for ucuser possible in list=usercontribs
 
 === Languages updated in 1.12 ===
 
